# seichi-game-data-server

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  buf.gen.yaml  build.rs  renovate.json
.github/workflows/: actionlint.yaml  ci.yaml
server/: Cargo.toml  rustfmt.toml
server/.cargo/: config.toml
server/app/: Cargo.toml
server/app/src/: config.rs  data_sources.rs  db.rs  lib.rs  main.rs
server/app/src/db/: data_sources.rs
server/app/src/services/: read.rs
server/config/: Cargo.toml
server/config/src/: lib.rs
server/domain/: Cargo.toml
server/domain/src/: lib.rs  models.rs
server/infra/grpc/: Cargo.toml  buf.gen.yaml  build.rs
server/infra/grpc/src/: lib.rs  read.rs  read_service.rs
server/infra/repository_impl/: Cargo.toml
server/infra/repository_impl/src/: data_sources.rs  lib.rs  mysql_data_source.rs
src/: app_models.rs  config.rs  data_sources.rs  lib.rs  main.rs
src/services/: read.rs
