[package]
name = "seichi-game-api"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }
config = { path = "../config" }
infra_grpc = { path = "../infra/grpc" }
infra_repository_impl = { path = "../infra/repository_impl" }

anyhow = "1.0.95"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tonic = { version = "0.14.0", features = ["gzip"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
tower-http = { version = "0.6.0", features = ["trace"] }
