[package]
name = "seichi-game-api"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }
config = { path = "../config" }
infra_grpc = { path = "../infra/grpc" }
infra_repository_impl = { path = "../infra/repository_impl" }

anyhow = "1.0.95"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tonic = { version = "0.14.0", features = ["gzip"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"

# Observability stack. Configured at runtime through OTEL_* / PYROSCOPE_*
# environment variables; if unset, the exporters stay disabled and the binary
# falls back to plain stdout logging.
init-tracing-opentelemetry = { version = "0.37", features = ["otlp", "tracing_subscriber_ext", "tracer", "metrics", "logs", "tls-webpki-roots"] }
# tracing_level_info raises the middleware span level from TRACE to INFO.
# Kept symmetric with publisher: the publisher inbound HTTP SERVER span was
# missing without this feature, so prefer the same setting on every otel
# middleware in the workspace to avoid the same symptom resurfacing if more
# middlewares are added later. Upstream issue:
# https://github.com/davidB/tracing-opentelemetry-instrumentation-sdk/issues/330
tonic-tracing-opentelemetry = { version = "0.32", features = ["tracing_level_info"] }
opentelemetry = "0.31"
pyroscope = { version = "2.0", features = ["backend-pprof-rs"] }
