[package]
name = "infra_grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
# pbjson-types, prost, tonicは `<= 1.0.0` の範囲でminor versionが上がった場合全て一緒にbumpすること。buf.gen.yamlの
# バージョンをあげることも忘れずに。

domain = { path = "../../domain" }

anyhow = "1.0.75"
async-trait = "0.1.74"
log = "0.4.20"
pbjson-types = "0.5.1"
prost = "0.11.9"
serde = "1.0.189"
tonic = { version = "0.9.2", features = ["gzip"] }
