[package]
name = "infra_grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
# pbjson-types, prost, tonicは `<= 1.0.0` の範囲でminor versionが上がった場合全て一緒にbumpすること。buf.gen.yamlの
# バージョンをあげることも忘れずに。

domain = { path = "../../domain" }

anyhow = "1.0.82"
async-trait = "0.1.80"
log = "0.4.21"
pbjson-types = "0.5.1"
prost = "0.13.4"
serde = "1.0.217"
tonic = { version = "0.12.3", features = ["gzip"] }
