[package]
name = "infra_grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
# pbjson-types, prost, tonicは `<= 1.0.0` の範囲でminor versionが上がった場合全て一緒にbumpすること。buf.gen.yamlの
# バージョンをあげることも忘れずに。

domain = { path = "../../domain" }

anyhow = "1.0.95"
async-trait = "0.1.85"
log = "0.4.25"
pbjson-types = "0.5.1"
prost = "0.13.0"
serde = "1.0.217"
tonic = { version = "0.9.2", features = ["gzip"] }
