[package]
name = "infra_repository_impl"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../../domain" }
config = { path = "../../config" }

anyhow = "1.0.73"
async-trait = "0.1.73"
chrono = "0.4.26"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "mysql", "chrono"] }
