[package]
name = "infra_repository_impl"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../../domain" }
config = { path = "../../config" }

anyhow = "1.0.95"
async-trait = "0.1.85"
chrono = "0.4.39"
sqlx = { version = "0.8.0", features = ["runtime-tokio-rustls", "mysql", "chrono"] }
